2005-06-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/mutopia-index.py (headertext): trim text.

	* Documentation/topdocs/NEWS.tely (Top): refresh.

	* scm/define-markup-commands.scm (wordwrap-string): new function:
	split string in paras and words.
	(wordwrap-markups): new function.
	(wordwrap-stencils): new function. 
	(justify): use it.
	(wordwrap): use it.
	(wordwrap-string): use it
	(justify-string): use it.

	* scm/lily-library.scm (regexp-split): new function.

	* scm/define-markup-commands.scm: remove encoded-simple. 
	remove font-markup.
	(fontsize): remove old version  of fontsize.
	(wordwrap): new markup function. Wrap into paragraphs.

	* VERSION: Branch lilypond_2_6
	(MINOR_VERSION): go to 2.7.0

2005-06-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* po/zh_TW.po: update from translation project.

2005-06-28  Graham Percival  <gperlist@shaw.ca>

	* scm/midi.scm: compile fix.

2005-06-28  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py : Fix embarrassing bug in my previous
	patch. Now, the tempfile module is loaded too, not only used.

2005-06-28  Stephen Charles McCarthy  <stecmccarthy@hotpop.com>

	* scm/midi.scm: changed midi volumes in absolute-volume-alist from
	0.05 - 1.00 to 0.25 - 1.00

	* scm/midi.scm: moved the default-instrument-equalizer procedure
	to just under the insturment-equalizer-alist it takes as an
	argument.

2005-06-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/advanced-notation.itely (Font selection):
	remove CMR note.

	* scm/framework-ps.scm (write-preamble): ly:warning iso. ly:warn 

2005-06-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* THANKS: Add UTF-8 marker.

	* Documentation/user/point-and-click.itely (http): Update: use
	lilypond-invoke-editor.  Fix: instruct to use user.js.

2005-06-27  Graham Percival  <gperlist@shaw.ca>

	* ly/titling-init.ly: implements printpagenumber, increases
	space between dedication and title (to avoid collisions with